updating package classes, changing snap official look

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,6 +50,7 @@
             id="password-input"
             name="password-input"
             onkeyup="passwordChange()"
+            autofocus
           />
           <br />
           <br />
